tests/parser/var-statement-not-terminated.stderr
error: expected ';'
 --> $DIR/var-statement-not-terminated.lox:1:11
  |
1 | var x = 5 _
  |           ^
