tests/parser/var-statement-not-terminated.lox
var x = 5 _
